removal of old glossary
Signed-off-by: mereolog <pawel.garbacz@makolab.com>